trasformato in SPA senza BE tranne fromspree - servizio online per email

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -13,8 +13,9 @@
 @use "./partials/main.scss" as *;
 @use "./partials/carousel.scss" as *;
 @import "/node_modules/bootstrap/scss/bootstrap";
-@import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100,500,800';
-@import url('https://fonts.googleapis.com/css2?family=Comforter&family=Fasthand&family=Poppins:wght@300;400;500;600;700;900&display=swap');
+
+// @import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100,500,800';
+// @import url('https://fonts.googleapis.com/css2?family=Comforter&family=Fasthand&family=Poppins:wght@400;500;600;700;800&display=swap');
 
 
 body {
